<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/view_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ShowLastPositionActivity"
    tools:showIn="@layout/activity_show_last_position">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal" >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:src="@mipmap/marker" />
        <TextView
            android:id="@+id/mLatitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mLatitudeText"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/mLongitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mLongitudeText"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textSize="16dp" />
        <Button
            android:id="@+id/btnShowLocation"
            android:text="@string/btn_get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_bg"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
        <Button
            android:id="@+id/btnDisplayMap"
            android:text="@string/btn_show_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_bg"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
    </LinearLayout>
</RelativeLayout>
